--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^18.0.0",
     "clsx": "^1.2.1",
     "react": "^18.2.0",
